--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -23,9 +23,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install pytest
         pip install -r requirements.txt
  
     - name: Test with pytest
       run: |
-        pytest
+        pytest test.py
